--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
@@ -38,7 +38,7 @@
             <table id="example" class="table table-striped table-hover table-responsive"
                 cellspacing="0" width="100%" style="font-size:15px;" *ngIf="loadTabla1 == true">
               <thead>
-                  <tr>
+                  <tr style="cursor: pointer">
                       <th >No</th>
                       <th>Código Interno</th>
                       <th >Código Referencia</th>
@@ -51,13 +51,13 @@
                       <th>Tema / Comunicación</th>
                       <th>Funcionario Asignado</th>
                       <th>Estado</th>
-                      <th >Ver</th>
+                      <th>Ver</th>
                   </tr>
               </thead>
               <tbody>
                 <tr *ngFor="let item of JsonOutgetlistaComunicacionEnc; let i = index">
                   <td >{{ i + 1 }}</td>
-                  <td >{{ item.codCorrespondenciaEnc }}</td>
+                  <td style="cursor: pointer" title="{{ item.idCorrespondenciaEnc }}" >{{ item.codCorrespondenciaEnc }}</td>
                   <td >{{ item.codReferenciaSreci }}</td>
                   <td >{{ item.descTipoDocumento }}</td>
                   <td style="cursor: help" title="{{ item.descDeptoFuncional }} ">
@@ -226,7 +226,7 @@
                                           <th scope="row">{{ i + 1 }}</th>
                                           <td>{{ item.codDocumento }}</td>
                                           <td>{{ item.fechaIngreso | date :'dd-MM-yyyy' }}</td>
-                                          <td>{{ item.urlDocumento }}</td>
+                                          <td>{{ item.descDocumento }}</td>
                                           <td>
                                             <a *ngIf="item.urlDocumento != null && item.urlDocumento.length > 5"
                                               href="{{ urlComplete + item.urlDocumento }}" target="_blank">
