--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/agregar.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/agregar.actividad.component.html
@@ -36,7 +36,7 @@
   <hr>
 
   <div class="col-xs-12 col-md-12 col-lg-12" *ngIf=" loadTabla1 == true">
-    <table id="example" class="table table-striped table-hover table-bordered" cellspacing="0"  >
+    <table  class="table table-striped table-hover table-bordered" cellspacing="0"  >
         <thead >
             <tr>
               <th>No.</th>
@@ -47,7 +47,7 @@
               <th>Tema Comunicación</th>
               <th>Fecha Creación</th>
               <th>Fecha Entrega.</th>
-              <th>Acción</th>
+              <th style="width:80px">Acción</th>
             </tr>
         </thead>
 
@@ -66,7 +66,7 @@
               <td style="cursor: help" title="Descripcion: {{ item.descCorrespondenciaEnc }}"> {{ item.temaComunicacion }} </td>
                 <!-- <td> {{ timeConverter( item.fechaMaxEntrega.timestamp )  }} </td> -->
               <td> {{ item.fechaIngreso | date :'dd-MMM-yyyy' }} </td>
-              <td> {{ item.fechaMaxEntrega | date :'dd-MMM-yyyy' }} </td>
+              <td> {{ item.fechaMaxEntrega | date :'dd-MM-yyyy' }} </td>
               <td> <a href="/#" (click)="datoOficio( item.codCorrespondenciaEnc, item.codReferenciaSreci,
                       item.idDeptoFuncional,
                       item.nombre1Funcionario, item.apellido1Funcionario,
@@ -75,7 +75,21 @@
                     data-toggle="modal" data-target="#t_and_c_m" >
                     <!-- <i class="material-icons" data-toggle="tooltip" data-placement="top" title="Asignar" >assignment_ind</i> -->
                     <img src="/assets/icons/comunicacion/seo-report_blue_24x24.png" class="d-inline-block align-top" alt="" title="Asignar Comunicación">
-                  </a> </td>
+                  </a>
+
+                  <!-- Boton de Documentos -->
+                  <a href="/#" (click)="datoOficio( item.codCorrespondenciaEnc, item.codReferenciaSreci,
+                                                         item.idDeptoFuncional,
+                                                         item.nombre1Funcionario, item.apellido1Funcionario,
+                                                         item.nombre2Funcionario, item.apellido2Funcionario,
+                                                         item.idFuncionario, item.idEstado, item.idCorrespondenciaEnc,
+                                                         item.idTipoDocumento, item.idTipoComunicacion,
+                                                         item.temaComunicacion, item.descInstitucion, item.perfilInstitucion ); getlistaDocumentosTable();"
+                               data-toggle="modal" data-target="#t_and_c_m5" >
+
+                    <img src="/assets/icons/comunicacion/zoom-interface-symbol-of-text-paper-with-a-magnifier-glass_blue_24x24.png" class="d-inline-block align-top" alt="" title="Ver Documento de soporte">
+                  </a>
+              </td>
             </tr>
         </tbody>
     </table>
@@ -87,19 +101,19 @@
   <ul class="pagination" *ngIf=" loadTabla1 == true">
     <!-- Boton de Previous -->
     <li>
-       <a  [routerLink]="['/agregar-actividad', pagePrev]" aria-label="Previous" >
+       <a  [routerLink]="['/seguimiento/asignar-comunicacion', pagePrev]" aria-label="Previous" >
           <i class="material-icons">navigate_before</i>
        </a>
     </li>
     <!-- Botones de las Paginas Totales -->
     <li *ngFor="let page of pages">
-      <a [routerLink]="['/agregar-actividad', page + 1 ]" >
+      <a [routerLink]="['/seguimiento/asignar-comunicacion', page + 1 ]" >
         <i class="material-icons">panorama_fish_eye</i>{{ page + 1 }}
       </a>
     </li>
     <!-- Boton de Next -->
     <li>
-       <a  [routerLink]="['/agregar-actividad', pageNext]" aria-label="Next" >
+       <a  [routerLink]="['/seguimiento/asignar-comunicacion', pageNext]" aria-label="Next" >
           <i class="material-icons">navigate_next</i>
        </a>
     </li>
@@ -139,7 +153,7 @@
           </form>
 
           <!-- Tabla de Funcionarios disponibles para asignar -->
-          <div class="table table-striped table-bordered" style="height: 300px; overflow: auto">
+          <div class="table table-striped table-hover table-responsive" style="height: 300px; overflow: auto">
             <table class="table">
               <thead>
                 <tr>
@@ -225,5 +239,80 @@
       </div>
     </div>
   </div>
+
+  <!-- Modal de Ver Documento de soporte de la Comunicacion-->
+  <div *ngIf="idEstadoModal != 5 " class="modal fade" id="t_and_c_m5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"
+        data-backdrop="static" data-keyboard="false">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true" > <i class="material-icons">close</i> </button>
+          <h4 class="modal-title" id="myModalLabel">Comunicación No. {{ codOficioIntModal }} | Referencia ( {{ codOficioRefModal }} )</h4>
+          <!-- Loader de Carga de los Datos -->
+          <div id="loader-2" *ngIf="loading_table == 'show'" >
+            <img src="assets/images/loading_2.gif" alt="Cargando Tareas" style="width:25px;">
+          </div>
+        </div>
+
+        <div class="modal-body">
+          <!-- Formulario del Oficio Asignado -->
+            <form #AnularComForm="ngForm" (ngSubmit)="onSubmit(agregarActividadResp, 4)" name="AnularComForm" role="form">
+              <!-- fila 1 del Formulario -->
+              <h4>Documento(s) de la Comunicación | {{ codOficioRefModal }}</h4>
+              <hr class="colorgraph">
+              <!-- fila 2 del Formulario -->
+              <div class="row">
+                <div class="col-md-12 mb-4">
+                  <!-- Tabla de Funcionarios disponibles para asignar -->
+                  <div class="table table-striped table-bordered" id="demo2" style="height: 300px; overflow: auto">
+                    <!-- Loader de Carga de los Datos -->
+                    <div id="loader-2" *ngIf="loading_table == 'show'" >
+                      <p style="margin-left:35%; margin-top:7%; margin-bottom:2%;">Buscando información de Documentos ...</p>
+                      <img src="assets/images/832.gif" alt="Cargando Tareas" style="margin-left:45%;" >
+                    </div>
+
+                    <table class="table table-striped" cellspacing="0" width="100%"
+                        *ngIf="loadTabla2 == true">
+                      <thead>
+                        <tr>
+                          <th>#</th>
+                          <th>Código Documento</th>
+                          <th>Fecha Creacion</th>
+                          <th>Documento</th>
+                          <th>Descargar</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr *ngFor="let item of JsonOutgetlistaDocumentosUpload; let i = index">
+                          <th scope="row">{{ i + 1 }}</th>
+                          <td>{{ item.codDocumento }}</td>
+                          <td>{{ item.fechaIngreso | date :'dd-MM-yyyy' }}</td>
+                          <td>{{ item.descDocumento }}</td>
+                          <td>
+                            <a *ngIf="item.urlDocumento != null && item.urlDocumento.length > 5" title="Ver Documento de soporte"
+                              href="{{ urlComplete + item.urlDocumento }}" target="_blank">
+                                <i class="material-icons">photo</i>
+                            </a>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+
+              <hr class="colorgraph">
+              <!-- <button class="btn btn-primary" type="submit">Submit form</button> -->
+              <!-- <button type="button" class="btn btn-primary">Limpiar</button> -->
+              <!-- <button class="btn btn-success" type="submit" [disabled]="!AnularComForm.valid" style="cursor: pointer">Guardar</button> -->
+              <button type="button" id="closeModalAnulaCom" class="btn btn-danger" data-dismiss="modal" style="cursor: pointer">Cerrar</button>
+          </form>
+      </div>
+        <div class="modal-footer">
+
+        </div>
+  </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+  </div><!-- /.Modal de Ver Documento de soporte de la Comunicacion -->
 
 </div>
