--- a/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
@@ -34,7 +34,7 @@
 		<form #ingresoComunicacionForm="ngForm" (ngSubmit)="onSubmit(registerComunicacion)"   name="ingresoComunicacionForm" role="form">
 			<h2> {{ titulo }} <small> | SICDOC.</small></h2>
 			<hr class="colorgraph">
-      <!-- <button type="button" style="padding-left:5px" (click)="generatePDF()" class="btn btn-primary btn-sm">Generar PDF</button> -->
+      <button type="button" style="padding-left:5px" (click)="generatePDF()" class="btn btn-primary btn-sm">Generar PDF</button>
 
       <div class="panel-heading">
         <h4 class="panel-title">
