--- a/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
@@ -32,6 +32,11 @@
                       title="Opción que permite Registrar la Salida de Correspondencia; internas (Memos, Circulares) externas(Oficios, Notas Verbales) de la SRECI">
                     <img src="/assets/icons/comunicacion/email_out.png" class="d-inline-block align-top" alt="">
                     Salida de Correspondencia</a>
+                    <hr>
+                    <a class="dropdown-item" [routerLink]="['correspondencia/recepcion-de-correspondencia']" routerLinkActive="active"
+                        title="Opción que permite Registrar la Salida de Correspondencia; internas (Memos, Circulares) externas(Oficios, Notas Verbales) de la SRECI">
+                      <img src="/assets/icons/comunicacion/email_out.png" class="d-inline-block align-top" alt="">
+                      Acuse de Recibido de Correspondencia</a>
                  </div>
               </li>
               <li class="nav-item dropdown">
