--- a/Angular_SICDOC/sicdoc/src/app/components/correspondencia/correspondencia.entrada/correspondencia.entrada.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/correspondencia/correspondencia.entrada/correspondencia.entrada.component.html
@@ -307,8 +307,8 @@
 
               <!-- Notas Verbales -->
               <!-- <li class="list-group-item"> <i class="material-icons">assignment</i> Oficios Ingresados -- <span class="badge badge-pill badge-primary"> {{ countOficiosIngresados }}  </span> </li> -->
-              <li class="list-group-item"> <i class="material-icons">assignment_late</i> Notas Pendientes --- | <span class="badge badge-pill badge-warning"> {{ countNotassIngresados }} </span> </li>
-              <li class="list-group-item"> <i class="material-icons">assignment_turned_in</i> Notas Recibidas -- | <span class="badge badge-pill badge-primary"> {{ countNotasPendientes }} </span> </li>
+              <li class="list-group-item"> <i class="material-icons">assignment_late</i> Notas Pendientes --- | <span class="badge badge-pill badge-warning"> {{ countNotasIngresados }} </span> </li>
+              <li class="list-group-item"> <i class="material-icons">assignment_turned_in</i> Notas Recibidas -- | <span class="badge badge-pill badge-primary"> {{ countNotasIngresados }} </span> </li>
 
             </ul>
 
