--- a/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
@@ -165,10 +165,14 @@
                      Cambiar Contraseña</a>
                      <!-- <i class="material-icons">security</i> Cambiar Contraseña</a> -->
                    <hr>
-                   <a class="dropdown-item" [routerLink]="['/login/1']">
-                     <img src="/assets/icons/media/sign-out-option_24x24.png" class="d-inline-block align-top" alt="">
-                     Cerrar sesión</a>
+                   <a class="dropdown-item" [routerLink]="['/auth/editar-usuario']">
+                     <img src="/assets/icons/comunicacion/shopping-support-online_brow_24x24.png" class="d-inline-block align-top" alt="">
+                     Editar Perfil</a>
                      <!-- <i class="material-icons">exit_to_app</i> Cerrar sesión</a> -->
+                     <hr>
+                     <a class="dropdown-item" [routerLink]="['/auth/login/1']">
+                       <img src="/assets/icons/media/sign-out-option_24x24.png" class="d-inline-block align-top" alt="">
+                       Cerrar sesión</a>
                  </div>
                </li>
 
@@ -177,7 +181,7 @@
           <!-- Menu de Login No Identificado -->
           <ul *ngIf="!identity || identity == null" class="navbar-nav">
             <li class="nav-item">
-               <a class="nav-link" [routerLink]="['/login']">Acceder</a>
+               <a class="nav-link" [routerLink]="['/auth/login']">Acceder</a>
             </li>
             <li class="nav-item">
                <a class="nav-link" [routerLink]="['/contactos/contactos-sreci']">Contactos</a>
